# age

./: .gitignore  .gitlab-ci.yml  README.md
src/: .README.md.swp  .clang-format  .clang-tidy  CMakeLists.txt  README.adoc  README.md  age.pri  age.pro  age_qt_gui.pro  write_license_header.js
src/age_cgb_lut/: CMakeLists.txt  README.md  age_cgb_lut.cpp
src/age_common/: CMakeLists.txt  age.cpp  age.hpp  age_audio.hpp  age_common.pro  age_debug.cpp  age_debug.hpp  age_downsampler.cpp  age_emulator.cpp  age_emulator.hpp  age_graphics.cpp  age_graphics.hpp  age_non_copyable.hpp  age_pcm_ring_buffer.cpp  age_pcm_sample.hpp  age_pixel.hpp  age_png.cpp  age_screen_buffer.cpp  age_screen_buffer.hpp  age_types.hpp  age_utilities.cpp
src/age_emulator_gb/: CMakeLists.txt  README.md  age_emulator_gb.pro  age_gb.hpp  age_gb_bus.cpp  age_gb_bus.hpp  age_gb_core.cpp  age_gb_core.hpp  age_gb_cpu.cpp  age_gb_cpu.hpp  age_gb_cpu_opcodes.cpp  age_gb_div.cpp  age_gb_div.hpp  age_gb_emulator.cpp  age_gb_emulator.hpp  age_gb_emulator_impl.cpp  age_gb_emulator_impl.hpp  age_gb_joypad.cpp  age_gb_joypad.hpp  age_gb_lcd.cpp  age_gb_lcd.hpp  age_gb_lcd_interrupts.cpp  age_gb_lcd_irqs.cpp  age_gb_lcd_ly_lyc.cpp  age_gb_lcd_old.cpp  age_gb_lcd_old.hpp  age_gb_lcd_old_ly_lyc.cpp  age_gb_lcd_old_ports.cpp  age_gb_lcd_old_ppu.cpp  age_gb_lcd_old_render.cpp  age_gb_lcd_older_render.cpp  age_gb_lcd_palettes.cpp  age_gb_lcd_ports.cpp  age_gb_lcd_ppu.cpp  age_gb_lcd_render.cpp  age_gb_lcd_render.hpp  age_gb_lcd_scanline.cpp  age_gb_lcd_sprites.cpp  age_gb_memory.cpp  age_gb_memory.hpp  (+16 more)
src/age_emulator_test/: age_emulator_test.pro  age_test.cpp  age_test.hpp  age_test_app.cpp  age_test_app.hpp  age_test_app_utils.cpp  age_test_application.cpp  age_test_application.hpp  age_test_gb.cpp  age_test_gb.hpp  age_test_gb_gambatte.cpp  age_test_main.cpp  age_test_mooneye.cpp  age_test_mooneye.hpp  age_test_runner.cpp  age_test_runner.hpp
src/age_js/: .editorconfig  README.md  angular-cli.json  angular.json  browserslist  karma.conf.js  ngsw-config.json  package-lock.json  package.json  tsconfig.json  tslint.json
src/age_qt_emu_test/: age_qt_emu_test.pro  age_test.hpp  age_test_app.cpp  age_test_app.hpp  age_test_app_ignore.cpp  age_test_app_utils.cpp  age_test_gb.cpp  age_test_gb.hpp  age_test_gb_blargg.cpp  age_test_gb_gambatte.cpp  age_test_gb_mooneye.cpp  age_test_main.cpp
src/age_qt_gui/: CMakeLists.txt  age_qt_gui.pro  age_ui_qt.cpp  age_ui_qt.hpp  age_ui_qt_audio.cpp  age_ui_qt_audio.hpp  age_ui_qt_emulation_runner.cpp  age_ui_qt_emulation_runner.hpp  age_ui_qt_emulator.cpp  age_ui_qt_emulator.hpp  age_ui_qt_gl_frame_manager.cpp  age_ui_qt_gl_renderer.cpp  age_ui_qt_gl_renderer.hpp  age_ui_qt_gl_shader.cpp  age_ui_qt_gl_texture.cpp  age_ui_qt_main.cpp  age_ui_qt_main_window.cpp  age_ui_qt_main_window.hpp  age_ui_qt_renderer.cpp  age_ui_qt_renderer.hpp  age_ui_qt_renderer_shader.cpp  age_ui_qt_settings.hpp  age_ui_qt_settings_audio.cpp  age_ui_qt_settings_dialog.cpp  age_ui_qt_settings_keys.cpp  age_ui_qt_settings_miscellaneous.cpp  age_ui_qt_settings_video.cpp  age_ui_qt_user_value_store.cpp  age_ui_qt_user_value_store.hpp  age_ui_qt_video.cpp  age_ui_qt_video.hpp  age_ui_qt_video_post_processor.cpp  age_ui_qt_video_renderer.cpp  age_ui_qt_video_shader.cpp
src/age_simulator_gb/: age_gb.hpp  age_gb_bus.cpp  age_gb_bus.hpp  age_gb_core.cpp  age_gb_cpu.cpp  age_gb_cpu.hpp  age_gb_joypad.hpp  age_gb_lcd.cpp  age_gb_lcd.hpp  age_gb_lcd_ports.cpp  age_gb_memory.cpp  age_gb_memory.hpp  age_gb_memory_init.cpp  age_gb_serial.cpp  age_gb_serial.hpp  age_gb_simulator.cpp  age_gb_simulator.hpp  age_gb_sound.cpp  age_gb_sound_channels.cpp  age_gb_sound_utilities.hpp  age_gb_timer.cpp  age_gb_timer.hpp  age_simulator_gb.pro
src/age_test_runner/: CMakeLists.txt  age_tr_arguments.cpp  age_tr_arguments.hpp  age_tr_cmd_option.hpp  age_tr_main.cpp  age_tr_print.hpp  age_tr_print_stats.cpp  age_tr_run_tests.cpp  age_tr_run_tests.hpp  age_tr_tasks.cpp  age_tr_tasks.hpp  age_tr_tasks_acid2.cpp  age_tr_tasks_age.cpp  age_tr_tasks_blargg.cpp  age_tr_tasks_gambatte.cpp  age_tr_tasks_little_things.cpp  age_tr_tasks_mealybug.cpp  age_tr_tasks_mooneye.cpp  age_tr_tasks_mooneye_wilbertpol.cpp  age_tr_tasks_rtc3test.cpp  age_tr_tasks_same_suite.cpp  age_tr_thread_pool.hpp  main.cpp
src/age_tester/: CMakeLists.txt  age_tester_arguments.cpp  age_tester_arguments.hpp  age_tester_main.cpp  age_tester_run_tests.cpp  age_tester_run_tests.hpp  age_tester_tasks.cpp  age_tester_tasks.hpp  age_tester_tasks_acid2.cpp  age_tester_tasks_age.cpp  age_tester_tasks_blargg.cpp  age_tester_tasks_firstwhite.cpp  age_tester_tasks_gambatte.cpp  age_tester_tasks_little_things.cpp  age_tester_tasks_mealybug.cpp  age_tester_tasks_mooneye.cpp  age_tester_tasks_mooneye_gb.cpp  age_tester_tasks_mooneye_wilbertpol.cpp  age_tester_tasks_rtc3test.cpp  age_tester_tasks_same_suite.cpp  age_tester_thread_pool.hpp  age_tester_write_log.cpp  age_tester_write_log.hpp
src/age_ui_common/: age_ui.hpp  age_ui_common.pro  age_ui_downsampler.cpp  age_ui_downsampler.hpp  age_ui_pcm_ring_buffer.cpp  age_ui_pcm_ring_buffer.hpp  age_ui_speed_calculator.hpp
src/age_ui_qt/: age_ui_qt.cpp  age_ui_qt.hpp  age_ui_qt.pro  age_ui_qt_audio.cpp  age_ui_qt_audio.hpp  age_ui_qt_emulation_runner.cpp  age_ui_qt_emulation_runner.hpp  age_ui_qt_emulator.cpp  age_ui_qt_emulator.hpp  age_ui_qt_gl_frame_manager.cpp  age_ui_qt_gl_renderer.cpp  age_ui_qt_gl_renderer.hpp  age_ui_qt_gl_shader.cpp  age_ui_qt_gl_texture.cpp  age_ui_qt_main.cpp  age_ui_qt_main_window.cpp  age_ui_qt_main_window.hpp  age_ui_qt_settings.hpp  age_ui_qt_settings_audio.cpp  age_ui_qt_settings_dialog.cpp  age_ui_qt_settings_keys.cpp  age_ui_qt_settings_miscellaneous.cpp  age_ui_qt_settings_video.cpp  age_ui_qt_simulation_runner.cpp  age_ui_qt_simulation_runner.hpp  age_ui_qt_simulator.cpp  age_ui_qt_simulator.hpp  age_ui_qt_user_value_store.cpp  age_ui_qt_user_value_store.hpp
src/age_wasm/: CMakeLists.txt  age_wasm.cpp  age_wasm.pro
src/include/: age_debug.hpp  age_non_copyable.hpp  age_speed_calculator.hpp  (+2 more)
(+433 files in other folders)
